--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="ko">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!-- 미리보기 -->
         <meta property="og:title" content="Linkbrary" />
         <meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요" />
-        <meta property="og:image" content="images/library.png" />
+        <meta property="og:image" content="images/preview_library.png" />
         <meta property="og:url" content="https://github.com/dtc03003" />
         <title>Linkbrary</title>
-        <link rel="stylesheet" href="src/landing.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="src/css/landing.css" />
     </head>
 
     <body>
@@ -26,35 +23,35 @@
         <main>
             <section class="main_contents">
                 <p class="main_title">
-                    <span class="세 gradient">세상의 모든 정보</span>를<br />
+                    <span class="slogan_world gradient">세상의 모든 정보</span>를<br />
                     쉽게 저장하고<br class="responsive_br" />
                     관리해 보세요
                 </p>
-                <a href="/signup" class="add_Link">링크 추가하기</a>
-                <img src="./images/img.png" alt="" class="main_img" />
+                <a href="/signup" class="add_link">링크 추가하기</a>
+                <img src="./src/images/img_main.png" alt="메인 이미지" class="main_img" />
             </section>
 
             <section class="contents">
                 <div class="container">
-                    <p class="common_title">
-                        <span class="원 gradient">원하는</span>
-                        <span class="링 gradient">링크</span>를 저장하세요
+                    <p class="contents_title">
+                        <span class="slogan_want gradient">원하는</span>
+                        <span class="slogan_link gradient">링크</span>를 저장하세요
                     </p>
-                    <p class="common_description">
+                    <p class="contents_description">
                         나중에 읽고 싶은 글, 다시 보고 싶은 영상, 사고 싶은 옷, 기억하고 싶은 모든
                         것을 한 공간에 저장하세요.
                     </p>
-                    <img src="./images/img1.png" alt="" class="imageSize" />
+                    <img src="./src/images/img1.png" alt="링크 저장" class="image_size" />
                 </div>
             </section>
 
             <section class="contents">
                 <div class="container">
-                    <img src="./images/img2.png" alt="" class="imageSize" />
-                    <p class="common_title">
-                        링크를 폴더로 <span class="관 gradient">관리</span>하세요
+                    <img src="./src/images/img2.png" alt="폴더 이름 변경" class="image_size" />
+                    <p class="contents_title">
+                        링크를 폴더로 <span class="slogan_management gradient">관리</span>하세요
                     </p>
-                    <p class="common_description">
+                    <p class="contents_description">
                         나만의 폴더를 무제한으로 만들고 다양하게 활용할 수 있습니다.
                     </p>
                 </div>
@@ -62,31 +59,31 @@
 
             <section class="contents">
                 <div class="container">
-                    <p class="common_title">
-                        저장한 링크를 <span class="공 gradient">공유</span>해 보세요
+                    <p class="contents_title">
+                        저장한 링크를 <span class="slogan_share gradient">공유</span>해 보세요
                     </p>
-                    <p class="common_description">
+                    <p class="contents_description">
                         여러 링크를 폴더에 담고 공유할 수 있습니다. 가족, 친구, 동료들에게 쉽고
                         빠르게 링크를 공유해 보세요.
                     </p>
-                    <img src="./images/img3.png" alt="" class="imageSize" />
+                    <img src="./src/images/img3.png" alt="저장한 링크 공유" class="image_size" />
                 </div>
             </section>
 
             <section class="contents">
                 <div class="container">
-                    <img src="./images/img4.png" alt="" class="imageSize" />
-                    <p class="common_title">
-                        저장한 링크를 <span class="검 gradient">검색</span>해 보세요
+                    <img src="./src/images/img4.png" alt="저장한 링크 검색" class="image_size" />
+                    <p class="contents_title">
+                        저장한 링크를 <span class="slogan_search gradient">검색</span>해 보세요
                     </p>
-                    <p class="common_description">중요한 정보들을 검색으로 쉽게 찾아보세요.</p>
+                    <p class="contents_description">중요한 정보들을 검색으로 쉽게 찾아보세요.</p>
                 </div>
             </section>
         </main>
 
         <footer>
-            <div class="ft">
-                <div class="ft_ctn">
+            <div class="footer">
+                <div class="footer_container">
                     <div class="codeIt">
                         <p>©codeit - 2023</p>
                     </div>
