fix: 엔터 버그 수정

--- a/signin.html
+++ b/signin.html
@@ -42,7 +42,7 @@
                                 비밀번호를 입력해 주세요.
                             </p>
                         </div>
-                        <button class="login_button" type="submit" onclick="login()">로그인</button>
+                        <button class="login_button" type="button" onclick="login()">로그인</button>
                     </form>
                 </div>
             </section>
