--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header>
             <div class="gnb">
                 <a href="/" class="gnb_logo"></a>
-                <a href="/signin" class="gnb_login">로그인</a>
+                <a href="/signin.html" class="gnb_login">로그인</a>
             </div>
         </header>
 
@@ -27,7 +27,7 @@
                     쉽게 저장하고<br class="responsive_br" />
                     관리해 보세요
                 </p>
-                <a href="/signup" class="add_link">링크 추가하기</a>
+                <a href="/signup.html" class="add_link">링크 추가하기</a>
                 <img src="./src/images/img_main.png" alt="메인 이미지" class="main_img" />
             </section>
 
@@ -88,8 +88,8 @@
                         <p>©codeit - 2023</p>
                     </div>
                     <div class="privacy">
-                        <a href="/privacy">Privacy Policy</a>
-                        <a href="/faq">FAQ</a>
+                        <a href="/privacy.html">Privacy Policy</a>
+                        <a href="/faq.html">FAQ</a>
                     </div>
                     <div class="external_link">
                         <a
