--- a/signup.html
+++ b/signup.html
@@ -13,26 +13,33 @@
                     <a href="/" class="logo"></a>
                     <div class="sub_title">
                         <p>이미 회원이신가요?</p>
-                        <a href="/signin" class="join_link">로그인 하기</a>
+                        <a href="/signin.html" class="join_link">로그인 하기</a>
                     </div>
                 </div>
                 <div class="signup">
                     <form>
                         <div class="email">
-                            <label for="signup_email">이메일</label>
-                            <input id="signup_email" type="email" />
+                            <label for="sign_email">이메일</label>
+                            <input id="sign_email" type="email" />
+                            <p id="error_email" class="error-message"></p>
                         </div>
                         <div class="password">
-                            <label for="signup_password">비밀번호</label>
-                            <input id="signup_password" type="password" />
-                            <button class="eye_button"></button>
+                            <label for="sign_password">비밀번호</label>
+                            <div class="password_input">
+                                <input id="sign_password" type="password" />
+                                <button class="eye_button" type="button" />
+                            </div>
+                            <p id="error_password" class="error-message"></p>
                         </div>
-                        <div class="re_password">
-                            <label for="signup_re-password">비밀번호</label>
-                            <input id="signup-re_password" type="password" />
-                            <button class="eye_button"></button>
+                        <div class="confirm_password">
+                            <label for="sign_confirm_password">비밀번호 확인</label>
+                            <div class="password_input">
+                                <input id="sign_confirm_password" type="password" />
+                                <button class="confirm_eye_button" type="button" />
+                            </div>
+                            <p id="error_confirm_password" class="error-message"></p>
                         </div>
-                        <button class="login_button" type="submit">회원가입</button>
+                        <button class="signup_button" type="submit">회원가입</button>
                     </form>
                 </div>
             </section>
@@ -46,5 +53,6 @@
                 </div>
             </section>
         </main>
+        <script src="/src/script/signup.js" type="module"></script>
     </body>
 </html>
