--- a/signin.html
+++ b/signin.html
@@ -21,7 +21,7 @@
                         <div class="email">
                             <label for="sign_email">이메일</label>
                             <input id="sign_email" type="email" />
-                            <p id="error_email" class="error-message"></p>
+                            <p id="error_email" class="error_message"></p>
                         </div>
                         <div class="password">
                             <label for="sign_password">비밀번호</label>
@@ -29,16 +29,16 @@
                                 <input id="sign_password" type="password" />
                                 <button class="eye_button" type="button"></button>
                             </div>
-                            <p id="error_password" class="error-message"></p>
+                            <p id="error_password" class="error_message"></p>
                         </div>
                         <button class="login_button" type="submit">로그인</button>
                     </form>
                 </div>
             </section>
             <section>
-                <div class="social-login">
+                <div class="social_login">
                     <p>소셜 로그인</p>
-                    <div class="social-icons">
+                    <div class="social_icons">
                         <a href="https://www.google.com/" class="icon google"></a>
                         <a href="https://www.kakaocorp.com/page/" class="icon kakao"></a>
                     </div>
