--- a/signup.html
+++ b/signup.html
@@ -21,7 +21,7 @@
                         <div class="email">
                             <label for="sign_email">이메일</label>
                             <input id="sign_email" type="email" />
-                            <p id="error_email" class="error-message"></p>
+                            <p id="error_email" class="error_message"></p>
                         </div>
                         <div class="password">
                             <label for="sign_password">비밀번호</label>
@@ -29,7 +29,7 @@
                                 <input id="sign_password" type="password" />
                                 <button class="eye_button" type="button" />
                             </div>
-                            <p id="error_password" class="error-message"></p>
+                            <p id="error_password" class="error_message"></p>
                         </div>
                         <div class="confirm_password">
                             <label for="sign_confirm_password">비밀번호 확인</label>
@@ -37,16 +37,16 @@
                                 <input id="sign_confirm_password" type="password" />
                                 <button class="confirm_eye_button" type="button" />
                             </div>
-                            <p id="error_confirm_password" class="error-message"></p>
+                            <p id="error_confirm_password" class="error_message"></p>
                         </div>
                         <button class="signup_button" type="submit">회원가입</button>
                     </form>
                 </div>
             </section>
             <section>
-                <div class="social-login">
+                <div class="social_login">
                     <p>다른 방식으로 가입하기</p>
-                    <div class="social-icons">
+                    <div class="social_icons">
                         <a href="https://www.google.com/" class="icon google"></a>
                         <a href="https://www.kakaocorp.com/page/" class="icon kakao"></a>
                     </div>
