--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="ko"><head><meta charset="utf-8"/><link rel="stylesheet" href="/reset.css"/><title>React App</title><script defer="defer" src="/static/js/main.2547ed6b.js"></script><link href="/static/css/main.cdb71a02.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
+<!doctype html><html lang="ko"><head><meta charset="utf-8"/><title>Linkbrary</title><script defer="defer" src="/static/js/main.2547ed6b.js"></script><link href="/static/css/main.beaf8aeb.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
